[workspace]
resolver = "2"

members = [
    "abi",
    "types",
    "bytecode",
    "vm",
    "assembler",
    "ast",
    "parser",
    "lexer",
    "environment",
    "builder",
    "compiler",
    "silex",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
xelis-abi = { path = "abi" }
xelis-assembler = { path = "assembler" }
xelis-ast = { path = "ast" }
xelis-builder = { path = "builder" }
xelis-bytecode = { path = "bytecode" }
xelis-compiler = { path = "compiler" }
xelis-environment = { path = "environment" }
xelis-lexer = { path = "lexer" }
xelis-parser = { path = "parser" }
xelis-types = { path = "types" }
xelis-vm = { path = "vm" }

anyhow = "1.0.95"
better_any = "0.2.0"
criterion = "0.5.1"
futures = "0.3.31"
hashbrown = "0.15.2"
hex = "0.4.3"
indexmap = "2.8.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.26"
paste = "1.0.15"
runtime-context = "0.1.0"
schemars = "1.0.4"
serde = "1.0.215"
serde_json = "1.0.133"
thiserror = "2.0.3"
clap = { version = "4.5.48", features = ["derive"] }
