[workspace]
resolver = "2"

members = [
    "abi",
    "types",
    "bytecode",
    "vm",
    "assembler",
    "ast",
    "parser",
    "lexer",
    "environment",
    "builder",
    "compiler",
    "silex-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Silex language tooling and the Xelis virtual machine"
license = "MIT"
repository = "https://github.com/xelis-project/xelis-vm"

[workspace.dependencies]
silex-abi = { path = "abi" }
silex-assembler = { path = "assembler" }
silex-ast = { path = "ast" }
silex-builder = { path = "builder" }
silex-bytecode = { path = "bytecode" }
silex-compiler = { path = "compiler" }
silex-environment = { path = "environment" }
silex-lexer = { path = "lexer" }
silex-parser = { path = "parser" }
silex-types = { path = "types" }
xelis-vm = { path = "vm" }

anyhow = "1.0.95"
better_any = "0.2.0"
criterion = "0.5.1"
futures = "0.3.31"
hashbrown = "0.15.2"
hex = "0.4.3"
indexmap = "2.8.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.26"
paste = "1.0.15"
runtime-context = "0.1.0"
schemars = "1.0.4"
serde = "1.0.215"
serde_json = "1.0.133"
thiserror = "2.0.3"
clap = { version = "4.5.48", features = ["derive"] }
