[package]
name = "xelis-abi"
version = "0.1.0"
edition = "2021"

[dependencies]
xelis-types = { path = "../types" }
xelis-vm = { path = "../vm" }
xelis-ast = { path = "../ast" }
xelis-compiler = { path = "../compiler" }
xelis-parser = { path = "../parser" }
xelis-lexer = { path = "../lexer" }
xelis-builder = { path = "../builder" }

anyhow = "1.0.93"
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]