[package]
name = "xelis-abi"
version.workspace = true
edition.workspace = true

[dependencies]
xelis-types.workspace = true
xelis-vm.workspace = true
xelis-ast.workspace = true
xelis-compiler.workspace = true
xelis-parser.workspace = true
xelis-lexer.workspace = true
xelis-builder.workspace = true

anyhow.workspace = true
serde_json.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
