[package]
name = "silex-abi"
version.workspace = true
edition.workspace = true

[dependencies]
silex-types.workspace = true
xelis-vm.workspace = true
silex-ast.workspace = true
silex-compiler.workspace = true
silex-parser.workspace = true
silex-lexer.workspace = true
silex-builder.workspace = true

anyhow.workspace = true
serde_json.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
