[package]
name = "silex-assembler"
version.workspace = true
edition.workspace = true
description = "Assembler and disassembler for Silex bytecode modules"
license.workspace = true
repository.workspace = true

[dependencies]
silex-types.workspace = true
silex-bytecode.workspace = true
thiserror.workspace = true
log.workspace = true
