[package]
name = "xelis-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
xelis-types = { path = "../types" }
xelis-ast = { path = "../ast" }
xelis-environment = { path = "../environment" }
thiserror = "2.0.1"
paste = "1.0.15"
anyhow = "1.0.95"
log = "0.4.25"
hex = "0.4.3"

[dev-dependencies]
xelis-bytecode = { path = "../bytecode" }
futures = "0.3.31"
