[package]
name = "xelis-builder"
version.workspace = true
edition.workspace = true

[dependencies]
xelis-types.workspace = true
xelis-ast.workspace = true
xelis-environment.workspace = true
thiserror.workspace = true
paste.workspace = true
anyhow.workspace = true
log.workspace = true
hex.workspace = true

[dev-dependencies]
xelis-bytecode.workspace = true
futures.workspace = true
