[package]
name = "silex-builder"
version.workspace = true
edition.workspace = true

[dependencies]
silex-types.workspace = true
silex-ast.workspace = true
silex-environment.workspace = true
thiserror.workspace = true
paste.workspace = true
anyhow.workspace = true
log.workspace = true
hex.workspace = true

[dev-dependencies]
silex-bytecode.workspace = true
futures.workspace = true
