[package]
name = "silex-bytecode"
version.workspace = true
edition.workspace = true
description = "Serializable bytecode module format for Silex and the Xelis VM"
license.workspace = true
repository.workspace = true

[dependencies]
silex-types.workspace = true
indexmap.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
hex = { workspace = true, features = ["serde"] }
schemars = { workspace = true, features = ["indexmap2"] }

[dev-dependencies]
serde_json.workspace = true
