[package]
name = "xelis-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
xelis-ast.workspace = true
xelis-bytecode.workspace = true
xelis-types.workspace = true
xelis-environment.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
xelis-builder.workspace = true
xelis-lexer.workspace = true
xelis-parser.workspace = true
