[package]
name = "silex-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
silex-ast.workspace = true
silex-bytecode.workspace = true
silex-types.workspace = true
silex-environment.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
silex-builder.workspace = true
silex-lexer.workspace = true
silex-parser.workspace = true
