[package]
name = "xelis-environment"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
better_any.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
thiserror.workspace = true
xelis-types.workspace = true
xelis-bytecode.workspace = true
futures.workspace = true
runtime-context.workspace = true
