[package]
name = "silex-environment"
version.workspace = true
edition.workspace = true
description = "Runtime environment model for Silex execution on the Xelis VM"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
better_any.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
thiserror.workspace = true
silex-types.workspace = true
silex-bytecode.workspace = true
futures.workspace = true
runtime-context.workspace = true
