[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
xelis-types = { path = "../types" }
xelis-ast = { path = "../ast" }
xelis-environment = { path = "../environment" }
thiserror = "2.0.1"

[dev-dependencies]
xelis-ast = { path = "../ast" }
xelis-lexer ={ path = "../lexer" }
xelis-parser = { path = "../parser" }
xelis-builder = { path = "../builder" }