[package]
name = "silex-lexer"
version.workspace = true
edition.workspace = true
description = "Lexer for turning Silex source code into positioned tokens"
license.workspace = true
repository.workspace = true

[dependencies]
log.workspace = true
thiserror.workspace = true
silex-ast.workspace = true
silex-types.workspace = true
