[package]
name = "xelis-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
xelis-ast = { path = "../ast" }
xelis-types = { path = "../types" }
xelis-builder = { path = "../builder" }
xelis-environment = { path = "../environment" }
log = "0.4.22"
thiserror = "2.0.3"
indexmap = { version = "2.7.0", features = ["serde"] }
