[package]
name = "xelis-parser"
version.workspace = true
edition.workspace = true

[dependencies]
xelis-ast.workspace = true
xelis-types.workspace = true
xelis-builder.workspace = true
xelis-environment.workspace = true
log.workspace = true
thiserror.workspace = true
indexmap = { workspace = true, features = ["serde"] }
anyhow.workspace = true
paste.workspace = true
