[package]
name = "silex-parser"
version.workspace = true
edition.workspace = true

[dependencies]
silex-ast.workspace = true
silex-types.workspace = true
silex-builder.workspace = true
silex-environment.workspace = true
log.workspace = true
thiserror.workspace = true
indexmap = { workspace = true, features = ["serde"] }
anyhow.workspace = true
paste.workspace = true
