[package]
name = "silex-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "silex"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
silex-assembler.workspace = true
silex-builder.workspace = true
silex-bytecode.workspace = true
silex-compiler.workspace = true
silex-environment.workspace = true
silex-lexer.workspace = true
silex-parser.workspace = true
silex-types.workspace = true
xelis-vm.workspace = true
