[package]
name = "silex"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
xelis-assembler.workspace = true
xelis-builder.workspace = true
xelis-bytecode.workspace = true
xelis-compiler.workspace = true
xelis-environment.workspace = true
xelis-lexer.workspace = true
xelis-parser.workspace = true
xelis-types.workspace = true
xelis-vm.workspace = true
