[package]
name = "xelis-types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
indexmap = { version = "2.7.0", features = ["serde"] }
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.1"

[features]
value_pointer_drop = []
