[package]
name = "xelis-types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
hex = { version = "0.4.3", features = ["serde"] }
indexmap = { version = "2.7.0", features = ["serde"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
schemars = { version = "1.0.4", features = ["indexmap2"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "cell"
harness = false

[[bench]]
name = "u256"
harness = false

[features]
infinite-cell-depth = []
