[package]
name = "silex-types"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
hex = { workspace = true, features = ["serde"] }
indexmap = { workspace = true, features = ["serde"] }
itertools.workspace = true
lazy_static.workspace = true
schemars = { workspace = true, features = ["indexmap2"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "cell"
harness = false

[[bench]]
name = "u256"
harness = false

[features]
infinite-cell-depth = []
