[package]
name = "xelis-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
xelis-bytecode = { path = "../bytecode" }
xelis-types = { path = "../types" }
xelis-environment = { path = "../environment" }
thiserror = "2.0.3"
log = "0.4.26"
indexmap = "2.8.0"

[dev-dependencies]
xelis-builder = { path = "../builder" }
xelis-lexer ={ path = "../lexer" }
xelis-parser = { path = "../parser" }
xelis-compiler = { path = "../compiler" }
criterion = "0.5.1"
anyhow = "*"
serde_json = "*"

[[bench]]
name = "vm"
harness = false

[features]
infinite-cell-depth = ["xelis-types/infinite-cell-depth"]
