[package]
name = "xelis-vm"
version.workspace = true
edition.workspace = true

[dependencies]
xelis-bytecode.workspace = true
xelis-types.workspace = true
xelis-environment.workspace = true
thiserror.workspace = true
log.workspace = true
indexmap.workspace = true
futures.workspace = true
anyhow.workspace = true

[dev-dependencies]
xelis-builder.workspace = true
xelis-lexer.workspace = true
xelis-parser.workspace = true
xelis-compiler.workspace = true
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "vm"
harness = false

[features]
infinite-cell-depth = ["xelis-types/infinite-cell-depth"]
logging = []
