[package]
name = "xelis-vm"
version.workspace = true
edition.workspace = true
description = "Deterministic bytecode virtual machine for executing Silex modules"
license.workspace = true
repository.workspace = true

[dependencies]
silex-bytecode.workspace = true
silex-types.workspace = true
silex-environment.workspace = true
thiserror.workspace = true
log.workspace = true
indexmap.workspace = true
futures.workspace = true
anyhow.workspace = true

[dev-dependencies]
silex-builder.workspace = true
silex-lexer.workspace = true
silex-parser.workspace = true
silex-compiler.workspace = true
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "vm"
harness = false

[features]
infinite-cell-depth = ["silex-types/infinite-cell-depth"]
logging = []
